[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/hologram.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/Fonts/MenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/DrillBase/UpgradeMenu/BasicUpgrades/drill health.png" type="Texture" id=3]
[ext_resource path="res://UI/DrillBase/UpgradeMenu/Repair Icon.png" type="Texture" id=4]
[ext_resource path="res://UI/holo hover.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/holo press.tres" type="StyleBox" id=6]
[ext_resource path="res://UI/DrillBase/UpgradeMenu/UpgradeMenu.gd" type="Script" id=7]

[node name="UpgradeMenu" type="CenterContainer"]
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
custom_styles/panel = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="BG"]
margin_right = 600.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer"]
margin_top = 24.0
margin_right = 600.0
margin_bottom = 376.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="BG/CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 67.0
margin_right = 533.0
margin_bottom = 200.0
rect_min_size = Vector2( 450, 200 )
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade0" type="Button" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 200 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade0"]
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 200 )
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade0/VBoxContainer"]
modulate = Color( 0, 0.984314, 1, 1 )
margin_right = 150.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Name" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade0/VBoxContainer"]
margin_top = 67.0
margin_right = 150.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 42 )
custom_fonts/font = ExtResource( 2 )
text = "Name of Upgrade"
align = 1
valign = 1
autowrap = true

[node name="Desc" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade0/VBoxContainer"]
margin_top = 112.0
margin_right = 150.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 63 )
custom_fonts/font = ExtResource( 2 )
text = "Description of the Upgrade's effects"
align = 1
valign = 1
autowrap = true

[node name="Cost" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade0/VBoxContainer"]
margin_top = 178.0
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 21 )
custom_fonts/font = ExtResource( 2 )
text = "$Cost"
align = 1
valign = 1
autowrap = true

[node name="Upgrade1" type="Button" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 308.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 200 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade1"]
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 200 )
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade1/VBoxContainer"]
modulate = Color( 0, 0.984314, 1, 1 )
margin_right = 150.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Name" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade1/VBoxContainer"]
margin_top = 67.0
margin_right = 150.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 42 )
custom_fonts/font = ExtResource( 2 )
text = "Name of Upgrade"
align = 1
valign = 1
autowrap = true

[node name="Desc" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade1/VBoxContainer"]
margin_top = 112.0
margin_right = 150.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 63 )
custom_fonts/font = ExtResource( 2 )
text = "Description of the Upgrade's effects"
align = 1
valign = 1
autowrap = true

[node name="Cost" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade1/VBoxContainer"]
margin_top = 178.0
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 21 )
custom_fonts/font = ExtResource( 2 )
text = "$Cost"
align = 1
valign = 1
autowrap = true

[node name="Upgrade2" type="Button" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 316.0
margin_right = 466.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 200 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade2"]
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 200 )
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade2/VBoxContainer"]
modulate = Color( 0, 0.984314, 1, 1 )
margin_right = 150.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Name" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade2/VBoxContainer"]
margin_top = 67.0
margin_right = 150.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 42 )
custom_fonts/font = ExtResource( 2 )
text = "Name of Upgrade"
align = 1
valign = 1
autowrap = true

[node name="Desc" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade2/VBoxContainer"]
margin_top = 112.0
margin_right = 150.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 63 )
custom_fonts/font = ExtResource( 2 )
text = "Description of the Upgrade's effects"
align = 1
valign = 1
autowrap = true

[node name="Cost" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade2/VBoxContainer"]
margin_top = 178.0
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 21 )
custom_fonts/font = ExtResource( 2 )
text = "$Cost"
align = 1
valign = 1
autowrap = true

[node name="CenterContainer2" type="CenterContainer" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 600.0
margin_bottom = 256.0
rect_min_size = Vector2( 600, 40 )

[node name="RerollButton" type="Button" parent="BG/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 190.0
margin_top = 9.0
margin_right = 410.0
margin_bottom = 30.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Re-roll Upgrades for $50"

[node name="CenterContainer3" type="CenterContainer" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 600.0
margin_bottom = 352.0

[node name="HBoxContainer" type="HBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 50.0
margin_right = 549.0
margin_bottom = 80.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepairButton" type="Button" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 220.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/RepairButton"]
margin_right = 220.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/RepairButton/HBoxContainer"]
modulate = Color( 0, 0.984314, 1, 1 )
margin_right = 64.0
margin_bottom = 80.0
texture = ExtResource( 4 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/RepairButton/HBoxContainer"]
margin_left = 68.0
margin_top = 21.0
margin_right = 218.0
margin_bottom = 58.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Repair Drillbase by 10% for $10"
align = 1
valign = 1
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 236.0
margin_right = 434.0
margin_bottom = 80.0

[node name="Info" type="VBoxContainer" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/CenterContainer"]
margin_top = 18.0
margin_right = 198.0
margin_bottom = 62.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Funds" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/CenterContainer/Info"]
margin_right = 198.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Funds: $0"
valign = 1

[node name="Health" type="Label" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/CenterContainer/Info"]
margin_top = 24.0
margin_right = 198.0
margin_bottom = 44.0
rect_min_size = Vector2( 110, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Drillbase Health: 100%"
valign = 1

[node name="ExitMenu" type="Button" parent="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 450.0
margin_right = 499.0
margin_bottom = 80.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade0" to="." method="UG_button_press" binds= [ 0 ]]
[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade1" to="." method="UG_button_press" binds= [ 1 ]]
[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Upgrade2" to="." method="UG_button_press" binds= [ 2 ]]
[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/CenterContainer2/RerollButton" to="." method="_on_RerollButton_pressed"]
[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/RepairButton" to="." method="_on_RepairButton_pressed"]
[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/ExitMenu" to="." method="_on_ExitMenu_pressed"]
